--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+<script src="https://kit.fontawesome.com/aa435e094b.js" crossorigin="anonymous"></script>
+<title>Calculadora de Enfesto - EcoBrasil</title>
   </head>
   <body>
     <section class="preencher">
@@ -38,7 +41,13 @@
 
     </section>
   <div class="btn-box">
+    <button class="clear">Limpar</button>
+    <div class="btn-opt">
+    <div class="popup">Copiar</div>
+    <i class="fa-solid fa-clipboard fa-xl icon"></i>
     <button class="btn">Calcular</button>
+      </span>
+  </div>
   </div>
     
 <section class="box-result">
@@ -47,9 +56,6 @@
   <p class="result-col-2 result"> </p>
 </div>
 </section>
-<div class="div btn">
-  <button class="clear">Limpar</button>
-</div>
     <script src="./renderer.js"></script>
     <script src="script.js"></script>
   </body>
