--- a/index.html
+++ b/index.html
@@ -53,9 +53,12 @@
 <section class="box-result">
   <div class="div-result">
   <p class="result-col-1 result"> </p>
-  <p class="result-col-2 result"> </p>
 </div>
 </section>
+<div class="copy-totalmts">
+  <p class="copy-message copymts"></p>
+  <p class="total-mts copymts"></p>
+</div>
     <script src="./renderer.js"></script>
     <script src="script.js"></script>
   </body>
