--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 <script src="https://kit.fontawesome.com/aa435e094b.js" crossorigin="anonymous"></script>
-<title>Calculadora de Enfesto - EcoBrasil</title>
+<title>Calculadora de Enfesto Textil</title>
   </head>
   <body>
     <section class="preencher">
@@ -25,7 +25,7 @@
     </div>
     <div class="box"> 
       <label class="title-preencher ">Metros por enfesto:</label>
-      <input class="mts-enf resp-preencher" type="text" id="mts-enf" name="mts-enf"/>
+      <input class="mts-enf resp-preencher" type="text" id="mts-enf" name="mts-enf" maxlength="3" />
     </div>
     </section>
 
