--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           <option value="5">5 Folhas</option>
           <option value="10" selected>10 Folhas</option>
           <option value="20">20 Folhas</option>
+          <option value="30">30 Folhas</option>
         </select>
       </div>
 
